@@ -1,3 +1,6 @@
+RD-2008-01-31-0: Enhancem.: Added test for Issue 2476
+                 Review:    AH
+
 RD-2008-01-30-0: Bugfix:    fixed 1914 testsuite test
                  Review:    JG
 
